# fpsturbo

./: .gitignore  README.md  opengl.sh  pyproject.toml  sync.py
cupyturbo/: dns_main.py  dns_simulator.py  dns_wrapper.py
fps/: fps_compare.py  fps_sweep.csv  fps_sweep.txt  fps_sweep_a100.csv  fps_sweep_cuda.csv  fps_sweep_cufft.csv  fps_sweep_cufft.sh  fps_sweep_cupy.csv  fps_sweep_fortran.csv  fps_sweep_h100.csv  fps_sweep_h100_cu.csv  fps_sweep_hamm.sh  fps_sweep_numpy.csv  fps_sweep_numpy.sh  fps_sweep_numpy.txt  fps_sweep_scipy.csv  fps_sweep_scipy.sh  fps_sweep_scipy.txt
opengl/: dns_main_base.py  dns_main_oglm.py  dns_main_oglw.py
scipyturbo/: scipy_main.py  scipy_simulator.py  scipy_simulator_v0.py  scipy_simulator_v1.py  scipy_wrapper.py  turbo_simulator_cufft.py
spectrum/: energy_spectrum.py  omega_spectrum.py
