[project]
name = "mannetroll-cupyturbo"
version = "0.1.4"
description = "2D DNS turbulence simulator (NumPy + CuPy)"
readme = "README.md"
requires-python = ">=3.13,<3.14"
license = { file = "LICENSE" }

authors = [
  { name = "Torbjörn Sjögren" }
]

dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.3.5,<3",
    "numba>=0.63.1,<1",
    "pillow>=10.0",
    "PyQt6>=6.7",
    "scipy>=1.16.3",
]

#
# uv pip install -U PyQt6 PyQt6-Qt6 PyQt6-sip
#

# Optional GPU extra
[project.optional-dependencies]
cuda = [
  "cupy-cuda13x>=13.6.0",
  "fastrlock>=0.8",
]

[project.scripts]
turbulence1 = "cupyturbo.dns_main:main"
fps = "cupyturbo.dns_simulator:main"
turbulence2 = "scipyturbo.scipy_main:main"
sim = "scipyturbo.scipy_simulator:main"
cufft = "scipyturbo.turbo_simulator_cufft:main"

# Package discovery
[tool.setuptools.packages.find]
include = ["cupyturbo","scipyturbo"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "build>=1.3.0",
    "twine>=6.2.0",
]
